# graded-z-shielding

./: .gitignore  CMakeLists.txt  README.md  main.cc
docs/: HANDOFF.md
docs/HANDOFFS/: 2026-06-26-session-01-complete.md  _TEMPLATE.md
include/: ActionInitialization.hh  DetectorConstruction.hh  LayerSpec.hh  PrimaryGeneratorAction.hh
macros/: vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc
